# config

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml  versions.json
.github/workflows/: ci.yml
0.10.0/: 404.html  index.html
0.10.0/api/: index.html
0.10.0/license/: index.html
0.11.0/search/: search_index.json
0.13.0/: index.html
0.14.0/license/: index.html
0.15.0/search/: search_index.json
0.16.0/: index.html
0.16.0/search/: search_index.json
0.17.0/: objects.inv
0.17.0/api/: index.html
0.17.0/search/: search_index.json
0.18.0/: 404.html  index.html
0.18.0/license/: index.html
0.18.0/search/: search_index.json
0.20.0/: index.html
0.20.0/api/: index.html
0.20.0/search/: search_index.json
0.21.0/: 404.html  index.html
0.21.0/api/: index.html
0.21.0/license/: index.html
0.21.0/search/: search_index.json
0.22.0/: 404.html  index.html  objects.inv
0.22.0/api/: index.html
0.22.0/license/: index.html
0.22.0/search/: search_index.json
0.23.0/api/: index.html
0.23.0/search/: search_index.json
0.24.0/: 404.html  index.html  objects.inv
0.24.0/license/: index.html
0.24.0/search/: search_index.json
1.1.0/: index.html  objects.inv
1.1.0/search/: search_index.json
1.2.0/: 404.html
1.2.0/license/: index.html
1.2.0/search/: search_index.json
1.3.0/: index.html
1.3.0/search/: search_index.json
1.4.0/: objects.inv
1.4.0/license/: index.html
1.4.0/search/: search_index.json
1.5.0/: 404.html
1.5.0/search/: search_index.json
1.6.0/: index.html  objects.inv
(+92 files in other folders)
